# min-rs

./: .envrc  .gitignore  Cargo.toml  README.md  rusty-hook.toml
