[package]
name = "min-rs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rusty-hook = "^0.11.2"

[profile.dev]
opt-level = 1
overflow-checks = false
debug = true
debug-assertions = true
lto = false
strip = false

[profile.release]
opt-level = 3
overflow-checks = true
debug = false
debug-assertions = false
lto = true
strip = true
